--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -195,5 +195,5 @@ Resources:
         - { Type: AAAA, Name: !Sub "pf3508lwos.${Domain}", AliasTarget: { DNSName: "dkbbxvpr4gs05.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
 
         # Unseen Unheard
-        - { Type: A, Name: !Sub "pf3508lwos.${Domain}", AliasTarget: { DNSName: "d2s1srrp50e0q2.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
-        - { Type: AAAA, Name: !Sub "pf3508lwos.${Domain}", AliasTarget: { DNSName: "d2s1srrp50e0q2.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: A, Name: !Sub "pf2196usuh.${Domain}", AliasTarget: { DNSName: "d2s1srrp50e0q2.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf2196usuh.${Domain}", AliasTarget: { DNSName: "d2s1srrp50e0q2.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
