--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -211,7 +211,7 @@ Resources:
         - Cpu: !If [IsProduction, 100, 64]
           Environment:
             - Name: APP_NAME
-              Value: metrics
+              Value: play
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
